aligned images and fixed heading

--- a/client/src/app/Components/pitch/pitch.component.css
+++ b/client/src/app/Components/pitch/pitch.component.css
@@ -1,51 +1,49 @@
-
+.pitch-content{
+    padding-inline: 10rem;
+}
 
 .pitch-container {
     
-    padding-left: 3rem;
-    padding-right: 3rem;
-    margin: 10px 20px;
-    margin-left: 60px;
+    /* padding-left: 3rem;
+    padding-right: 10rem; */
+   
+    /* margin: 10px 20px;
+    margin-left: 60px; */
     justify-content: center;
+    
     
 }
 
 img {
-    width: 350px;
-    height: 250px;
+    width: 100%;
+    height: 300px;
     object-fit: cover;
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
     /* gap: 2px; */
    
-
 }
 
 .pitch-card {
     flex: 1 1 calc(33.33% - 1rem);
-    /* box-shadow: 0px 4px 6px rgba(207, 201, 201, 0.1); */
     overflow: hidden; 
     background-color: #ffffff;
     display: flex;
     flex-direction: column;
-    padding: 5px;
+    /* padding: 5px; */
+    width: 400px;
 }
-/* .pitch-card {
-    flex:  1 1 calc(33.33% - 1rem);
-  padding: 5px;
-} */
 
-.pitch-heading {
-    margin-left: 60px;
-}
+
 
 .pitch-sub-heading{
-    margin-left: 60px;
+   
     font-size: 18px;
+    padding-bottom: 0.8rem;
 
 
 }
 
-.card-body {
-    padding: 1rem;
-}
+/* .card-body {
+    padding: 0.2rem;
+} */
